--- a/src/components/Carousel/carousel.module.css
+++ b/src/components/Carousel/carousel.module.css
@@ -1,69 +1,49 @@
 .carouselContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   width: 100%;
-  max-width: 1440px;
-  margin: auto;
-  background-color: #fdf7f5;
-  border-radius: 16px;
-  padding: 40px;
-}
-
-.carouselItemList {
-  display: flex;
-  overflow: hidden;
-  width: 100%;
-  position: relative;
-}
-
-.carouselItem {
-  flex: 1 0 100%;
-  opacity: 0;
-}
-
-.carouselItem[data-active="true"] {
-  opacity: 1;
+  min-width: 800px;
+  position: absolute;
+  left: 0;
 }
 
 .carouselNavigator {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
   position: absolute;
   top: 50%;
-  transform: translateY(-50%);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.carouselNavigator button {
+.navButton {
+  color: #93C9FF;
   background-color: transparent;
   border: none;
   font-size: 24px;
+  font-weight: bold;
   cursor: pointer;
-  color: #666;
+  padding: 0 100px;
 }
 
-.carouselNavigator button:hover {
-  color: #333;
+.navButton:hover {
+  color: #002DAA;
 }
 
 .carouselIndicator {
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
   display: flex;
-  justify-content: center;
   gap: 8px;
-  margin-top: 20px;
 }
 
 .carouselIndicator button {
-  width: 12px;
-  height: 12px;
+  width: 10px;
+  height: 10px;
   border-radius: 50%;
+  background-color: #93C9FF;
   border: none;
-  background-color: #ccc;
   cursor: pointer;
 }
 
-.carouselIndicator button[data-active="true"] {
-  background-color: #007bff;
+.carouselIndicator button.active {
+  background-color: #002DAA;
 }
