--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,21 +1,24 @@
 .footer {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 20px 0;
-  background-color: white;
-  color: black;
   font-size: 14px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.1);
 }
 
 .logo {
-  width: 120px;
+  width: 100px;
   height: auto;
   margin-bottom: 5px;
 }
 
 .text {
-  font-size: 12px;
+  font-size: 10px;
   color: #333;
 }
