--- a/src/components/Header/css/header.module.css
+++ b/src/components/Header/css/header.module.css
@@ -7,12 +7,11 @@
 }
 
 .total_wrap {
+  width: 1440px;
   position: fixed;
   top: 0;
-  left: 0;
-  width: 100%;
-  box-shadow: 0px 0px 5px 2px #d1d1d1;
   background-color: #fff;
+  z-index: 1000;
 }
 
 .content {
