--- a/src/components/ChipInput/chipinput.module.css
+++ b/src/components/ChipInput/chipinput.module.css
@@ -8,4 +8,17 @@
 
 .itemList {
   display: flex;
+  flex-wrap: wrap;
+  padding: 4px 8px;
+  gap: 3px;
+}
+
+.info {
+  font-size: 14px;
+  color: #555;
+  margin-top: 4px;
+  padding-left: 2px;
+  display: block;
+  font-weight: 500;
+  padding: 4px 0px;
 }
