--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -29,18 +29,15 @@
 }
 
 .bannerLeft .bannerText {
-  margin-left: 200px;
-}
-
-.bannerRight .bannerText {
   margin-left: 100px;
 }
+
 .bannerImage {
   max-width: 300px;
 }
 
-.bannerLeft .bannerImage, .bannerRight .bannerImage  {
-  margin-left: 100px;
+.bannerLeft .bannerImage {
+  margin-left: 50px;
 }
 
 .highlight {
@@ -51,55 +48,78 @@
   font-family: "HakgyoansimDunggeunmisoTTF-B";
 }
 
-.banner h2 {
-  font-size: 20px;
+.banner h2, .postSection h2 {
+  font-size: 22px;
+  font-weight: bold;
 }
 
-.bannerText p {
-  font-size: 16px;
+.bannerText p, .postSection p {
+  font-size: 20px;
   color: #555;
   margin-top: 10px;
-  line-height: 1.3rem;
-  margin-bottom: 40px;
+  line-height: 1.8rem;
+  margin: 40px 0;
   white-space: pre-line;
 }
 
 .postSection {
-  margin-top: 200px; /* 캐러셀과의 간격 조정 */
-  padding-bottom: 300px;
-  text-align: center; /* 텍스트 가운데 정렬 */
+  margin-top: 150px;
+  text-align: left;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  background-color: #f8f9fa; /* 배경색 추가 */
-  border-radius: 16px; /* 둥근 모서리 */
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05); /* 부드러운 그림자 효과 */
-
+  width: 100%;
 }
 
-.postSection h2 {
-  font-size: 28px;
+.title {
+  font-size: 22px;
   font-weight: bold;
   margin-bottom: 20px;
+}
+
+.postsWrapper {
+  width: 100%;
+  background-color: antiquewhite;
+  border-radius: 10px;
+  height: 1500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.postsContainer {
+  width: 100%;
 }
 
 .noPosts {
   font-size: 16px;
   color: #666;
-  margin-bottom: 20px;
+  text-align: center;
 }
 
-.viewMoreButton {
-  background-color: #007bff;
-  color: white;
-  font-size: 16px;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: 0.3s;
+.petMenuSection {
+  text-align: center;
+  margin: 50px 0;
 }
 
-.viewMoreButton:hover {
-  background-color: #0056b3;
+.menuContainer {
+  display: flex;
+  gap: 100px; 
+  margin-top: 250px;
+}
+
+
+.menuItem img {
+  width: 40%;
+  height: auto;
+}
+
+.menuItem:hover img {
+  transform: scale(1.1);
+}
+
+.postsButton {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
 }
