--- a/src/pages/PostCreate/postcreate.module.css
+++ b/src/pages/PostCreate/postcreate.module.css
@@ -1,10 +1,9 @@
 .wrapper {
-  display: flex;
-  justify-content: center;
+  padding: 0px 8px;
 }
 
 .form_header {
-  width: 560px;
+  width: 100%;
   padding: 4px 0;
   display: flex;
   justify-content: space-between;
@@ -16,10 +15,11 @@
   border: none;
   background-color: #ffffff;
   cursor: pointer;
+  padding: 0;
 }
 
 .form {
-  width: 560px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -109,4 +109,9 @@
   padding: 6px 12px;
   border-radius: 4px;
   display: inline-block;
+}
+
+.post_button {
+  font-size: 16px;
+  padding: 4px 8px;
 }
