--- a/src/components/Menu/menu.module.css
+++ b/src/components/Menu/menu.module.css
@@ -1,7 +1,11 @@
 .menuContainer {
   display: flex;
-  gap: 100px; 
-  margin-top: 200px;
+  text-align: center;
+  background-color: white;
+  margin: 0 10px;
+  padding: 10px;
+  border-radius: 10px;
+  margin-top: 50px;
 }
 
 
