--- a/src/pages/PetMedical/petMedical.module.css
+++ b/src/pages/PetMedical/petMedical.module.css
@@ -8,7 +8,7 @@
 
 .container {
   padding: 20px;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .tabContainer {
@@ -24,7 +24,7 @@
   cursor: pointer;
   background-color: #EAEAEA;
   color: rgb(0, 0, 0);
-  width: 715px;
+
 }
 
 .tabButton:hover {
@@ -45,16 +45,17 @@
 }
 
 .title {
-  font-size: 24px;
+  font-size: 20px;
   font-family: "HakgyoansimDunggeunmisoTTF-B";
 }
 
 .contentWrapper {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column; 
   align-items: flex-start;
   gap: 10px;
   width: 100%;
+  height: 500px;
 }
 
 .mapContainer {
@@ -62,8 +63,7 @@
   max-width: 50%;
 }
 
-.dataContainer {
-  flex: 1;
-  max-width: 50%;
-  display: flex;
+.mapContainer, .dataContainer {
+  width: 100%;
+  max-width: 360px;
 }
