--- a/src/pages/Signup/signup.module.css
+++ b/src/pages/Signup/signup.module.css
@@ -24,7 +24,9 @@
 .form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 25px;
+  width: 280px;
 }
 
 .content ul {
@@ -32,7 +34,7 @@
   flex-direction: column;
   justify-content: center;
   gap: 40px;
-  padding: 50px 100px;
+  /* padding: 50px 100px; */
   border-radius: 100px;
   background-color: #fff;
 }
@@ -46,13 +48,14 @@
 }
 
 .content ul li input {
-  width: 400px;
+  width: 100%;
   height: 45px;
   border: none;
   border-bottom: solid 1px #93c9ff;
   border-radius: 10px;
   background-color: #e3f1ff;
   padding: 0 10px;
+  box-sizing: border-box;
 }
 
 .signupBtn {
@@ -60,7 +63,7 @@
   color: #fff;
   border: none;
   border-radius: 10px;
-  padding: 18px 0;
+  padding: 14px 0;
 }
 
 .oauth {
