--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,14 +1,12 @@
 .footer {
   width: 360px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: white;
+  position: fixed;
   bottom: 0;
-  height: 80px;
+  left: 50%;
+  padding: 10px 0;
+  transform: translateX(-50%);
+  text-align: center;
 }
-
 .logo {
   width: 60px;
   height: auto;
