--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -65,6 +65,7 @@
   aspect-ratio: 16 / 9;
   max-height: 100px;
   margin: 10px;
+  cursor: pointer;
 }
 
 .title {
@@ -77,7 +78,7 @@
   width: 100%;
   background-color: antiquewhite;
   border-radius: 10px;
-  height: 800px;
+  height: 300px;
   display: flex;
   align-items: center;
   justify-content: center;
