--- a/src/pages/PetFood/food.module.css
+++ b/src/pages/PetFood/food.module.css
@@ -1,5 +1,44 @@
-.postsButton {
+@font-face {
+  font-family: "HakgyoansimDunggeunmisoTTF-B";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimDunggeunmisoTTF-B.woff2")
+    format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+.banner {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  margin-bottom: 30px;
+}
+
+.bannerImage {
+  width: 100%;
+  max-width: 600px;
+}
+
+.content {
+  padding: 0 1px;
+}
+
+.title {
+  font-size: 16px;
+  font-family: "HakgyoansimDunggeunmisoTTF-B";
+  margin-bottom: 10px;
+  color: #002DAA;
+  text-align: center;
+}
+
+.description {
+  font-size: 9px;
+  line-height: 0.8rem;
+  text-align: center;
+  color: #444;
+  white-space: pre-line;
 }
