--- a/src/pages/PetMedical/petMedical.module.css
+++ b/src/pages/PetMedical/petMedical.module.css
@@ -14,6 +14,10 @@
   flex-grow: 1;
 }
 
+.container::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
+
 .tabContainer {
   display: flex;
   gap: 10px;
