--- a/src/pages/PetMedical/petMedical.module.css
+++ b/src/pages/PetMedical/petMedical.module.css
@@ -62,7 +62,6 @@
   align-items: flex-start;
   gap: 10px;
   width: 100%;
-  height: 500px;
 }
 
 .mapContainer {
@@ -110,10 +109,10 @@
 .noDataText{
   font-size: 12px;
   color: #555;
-  background-color: #e8eeff;
+  border-bottom: 1px solid #ddd;
   margin: 10px;
   border-radius: 5px;
-  height: 300px;
+  height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
