--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -7,8 +7,14 @@
 }
 
 .total_wrap {
-  width: 360px;
+  width: 100%;
+  max-width: 360px;
+  height: 52px;
   background-color: #fff;
+
+  position: fixed;
+  top: 0;
+  z-index: 1000;
 }
 
 .content {
