--- a/src/index.css
+++ b/src/index.css
@@ -138,23 +138,34 @@ table {
   border-spacing: 0;
 }
 
-.wrapper {
-  display: flex;
-  width: 100%;
-  height: 100vh;
-  align-items: center;
-  flex-direction: column;
+body,
+html {
+  height: 100%;
 }
 
+#root {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  max-width: 360px;
+  margin: 0 auto;
+}
+
+.wrraper {
+  max-width: 360px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
 
 .content {
   flex-grow: 1;
-  max-width: 360px;
   box-sizing: border-box;
   display: flex;
-  overflow-y: scroll;
+  padding: 52px 0px;
 }
 
-.content::-webkit-scrollbar{
+html::-webkit-scrollbar {
   display: none;
 }
