--- a/src/pages/Community/community.module.css
+++ b/src/pages/Community/community.module.css
@@ -1,13 +1,10 @@
+.wrapper {
+  background-color: #f3f3f6;
+  /* padding: 24px 0; */
+}
+
 .post_container {
-  height: 100%;
-  overflow-y: auto;
-}
-
-.post_container::-webkit-scrollbar {
-  scrollbar-width: none;
-}
-
-.post_item {
-  height: 500px;
-  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
