--- a/src/components/MenuBar/footer.module.css
+++ b/src/components/MenuBar/footer.module.css
@@ -6,7 +6,8 @@
   background-color: #fefefe;
   position: fixed;
   bottom: 0;
-  padding: 10px;
+  padding: 0px 40px;
+  height: 40px;
   box-sizing: border-box;
 }
 
