--- a/src/components/MenuBar/menubar.module.css
+++ b/src/components/MenuBar/menubar.module.css
@@ -5,7 +5,7 @@
 
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
 
   background-color: #fefefe;
   padding: 10px;
@@ -21,9 +21,14 @@
 }
 
 .home {
-  width: 30px;
+  width: 20px;
 }
 
-.img {
+.community {
   width: 25px;
+}
+
+.menu {
+  width: 25px;
+  padding-bottom: 6px;
 }
