--- a/src/pages/PostDetail/postdetail.module.css
+++ b/src/pages/PostDetail/postdetail.module.css
@@ -2,5 +2,32 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  padding: 52px 0px 80px 0px;
   gap: 4px;
+}
+
+.comment_submit_form {
+  width: 100%;
+  max-width: 360px;
+  position: fixed;
+  bottom: 0;
+  background-color: #ffffff;
+  padding: 8px 0;
+  border-top: 1px solid rgb(231, 232, 235);
+}
+
+.target_comment {
+  color: #002daa;
+}
+
+.comment_input {
+  display: flex;
+  padding-bottom: 8px;
+}
+
+.comment_input > input {
+  flex-grow: 1;
+  border: none;
+  outline: none;
+  font-size: medium;
 }
