style: PostDetailPage ui작업

--- a/src/pages/PostDetail/components/likebutton.module.css
+++ b/src/pages/PostDetail/components/likebutton.module.css
@@ -1,8 +1,21 @@
-.wrraper {
+.like_button_wrraper {
+  padding: 20px 0px;
+}
+
+.like_button {
   width: fit-content;
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 2px;
+  padding: 8px 16px;
+  border: 0.2px solid rgb(231, 232, 235);
+  border-radius: 24px;
+}
+
+.like_button:hover {
+  border-color: #93c9ff;
+  cursor: pointer;
 }
 
 .wrraper > img {
