--- a/src/pages/Community/community.module.css
+++ b/src/pages/Community/community.module.css
@@ -1,10 +1,18 @@
-.wrapper {
-  background-color: #f3f3f6;
-  /* padding: 24px 0; */
-}
-
 .post_container {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  /* gap: 24px; */
+}
+
+.description {
+  max-width: 360px;
+  display: -webkit-box;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  word-break: break-word;
+  line-height: 22px;
+  cursor: pointer;
+  white-space: pre-line;
 }
