--- a/src/pages/PetPlace/place.module.css
+++ b/src/pages/PetPlace/place.module.css
@@ -1,5 +1,112 @@
-.postsButton {
+@font-face {
+  font-family: "HakgyoansimDunggeunmisoTTF-B";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimDunggeunmisoTTF-B.woff2")
+    format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+.container {
+  padding: 20px;
+  height: auto;
+  background-color: white;
+  flex-grow: 1;
+}
+
+.title {
+  font-size: 18px;
+  font-family: "HakgyoansimDunggeunmisoTTF-B";
+  margin-bottom: 20px;
+}
+
+.categoryButtons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  margin-bottom: 30px;
+}
+
+.categoryButton {
+  background-color: #ffffff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 8px 12px;
+  font-size: 13px;
+  cursor: pointer;
+  color: black;
+}
+
+.activeCategory {
+  background-color: #93c9ff;
+  border-color: #93c9ff;
+  color: white;
+  font-weight: bold;
+}
+
+.activeCategory:hover {
+  background-color: #002daa;
+  border-color: #ffffff;
+}
+
+.categoryButton:not(.activeCategory):hover {
+  background-color: #f0f0f0;
+}
+
+.placeList {
   display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-top: 20px;
+}
+
+.placeItem {
+  display: flex;
+  align-items: center;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background 0.3s ease-in-out;
+}
+
+.placeItem:hover {
+  background-color: #f0f0f0;
+}
+
+.placeImage {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-right: 15px;
+}
+
+.placeItem div {
+  flex: 1;
+}
+
+.placeItem h3 {
+  margin: 5px 0;
+  font-size: 14px;
+  font-weight: bold;
+  font-family: "HakgyoansimDunggeunmisoTTF-B";
+}
+
+.placeItem p {
+  font-size: 12px;
+  color: #555;
+  display: block;
+  margin-top: 5px;
+}
+
+.messageText {
+  font-size: 12px;
+  color: #555;
+  border-bottom: 1px solid #ddd;
+  margin: 10px;
+  border-radius: 5px;
+  height: 100px;
+  display: flex;
+  align-items: center;
   justify-content: center;
-  margin-top: 50px;
 }
