--- a/src/components/CommunityPost/communitypost.module.css
+++ b/src/components/CommunityPost/communitypost.module.css
@@ -18,6 +18,7 @@
 }
 
 .post_header_userinfo_right {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -93,4 +94,14 @@
   line-height: 22px;
   cursor: pointer;
   white-space: pre-line;
+}
+
+.action_menu_wrapper {
+  display: flex;
+  gap: 4px;
+}
+
+.action_menu_wrapper > p {
+  font-size: 14px;
+  cursor: pointer;
 }
