--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -7,7 +7,7 @@
 }
 
 .homewrapper {
-  background-color: #F3F3F6;
+  background-color: #f3f3f6;
 }
 
 .banner {
@@ -57,6 +57,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding-bottom: 20px;
 }
 
 .postText {
@@ -73,16 +74,6 @@
   font-size: 14px;
   font-weight: bold;
   margin-bottom: 20px;
-}
-
-.postsWrapper {
-  width: 100%;
-  background-color: antiquewhite;
-  border-radius: 10px;
-  height: 300px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .noPosts {
