--- a/src/pages/Profile/profile.module.css
+++ b/src/pages/Profile/profile.module.css
@@ -7,10 +7,21 @@
 
 .userUl {
   padding: 30px;
-  border-bottom: 1px solid #cacaca;
+  /* border-top: 1px solid; */
   display: flex;
   flex-direction: column;
   gap: 20px;
+  width: 260px;
+}
+
+.userUl_div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  padding-top: 36px;
+  /* padding-bottom: 58.5px; */
 }
 
 .img_wrap {
@@ -20,9 +31,13 @@
 
 .img {
   cursor: pointer;
-  width: 55px;
-  height: 55px;
+  width: 70px;
+  height: 70px;
   border-radius: 100px;
+}
+
+.prev {
+  width: 15px;
 }
 
 .file {
@@ -41,12 +56,22 @@
   height: 30px;
 }
 
+.userName_box {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.pencil {
+  width: 20px;
+}
+
 .input {
-  width: 110px;
+  width: 60%;
   padding: 10px;
   font-size: 13px;
-  border: 1px solid #93c9ff;
-  border-radius: 5px;
+  border: none;
+  border-bottom: 1px solid #93c9ff;
 }
 
 .input:focus {
@@ -58,6 +83,11 @@
   padding: 6px 16px;
 }
 
+.notice {
+  font-size: 12px;
+  color: rgb(0, 221, 0);
+}
+
 .error {
   font-size: 12px;
   color: red;
@@ -66,18 +96,29 @@
 .pet_wrap {
   display: flex;
   flex-direction: column;
-  padding: 20px 0px;
-  width: 260px;
+  padding: 40px 0px;
   gap: 20px;
 }
 
 .pet_div {
   display: flex;
   justify-content: space-between;
+  padding: 10px 5px;
+  border-bottom: solid 1px;
+}
+
+.pet_div div {
+  display: flex;
+  justify-content: center;
+}
+
+.pet_div div p {
+  font-weight: bold;
 }
 
 .plus {
   width: 20px;
+  cursor: pointer;
 }
 
 .pet_ul {
@@ -87,4 +128,26 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+.post_div {
+  padding: 10px 5px;
+  border-bottom: solid 1px;
+  margin-top: 50px;
+}
+
+.post_div p {
+  font-weight: bold;
+}
+
+.post_ul li {
+  display: grid;
+  justify-content: space-between;
+  padding: 0 10px;
+  grid-template-columns: 2fr 1fr;
+  /* text-align: center; */
+}
+
+.post_ul li p {
+  padding: 10px;
 }
