--- a/src/pages/PetFood/food.module.css
+++ b/src/pages/PetFood/food.module.css
@@ -7,7 +7,7 @@
 }
 
 .container {
-  max-width: 800px;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -30,14 +30,67 @@
   font-size: 16px;
   font-family: "HakgyoansimDunggeunmisoTTF-B";
   margin-bottom: 10px;
-  color: #002DAA;
   text-align: center;
 }
 
 .description {
-  font-size: 9px;
-  line-height: 0.8rem;
+  font-size: 12px;
+  line-height: 1.2rem;
   text-align: center;
   color: #444;
   white-space: pre-line;
+}
+
+.messageText {
+  text-align: center;
+  font-size: 16px;
+  color: #777;
+}
+
+.categorySelect {
+  margin: 5px 0;
+  padding: 5px;
+  font-size: 12px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.foodTableContainer {
+  width: 100%;
+  overflow-x: auto;
+}
+
+.foodTable {
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 14px;
+  text-align: center;
+  table-layout: auto;
+  white-space: nowrap;
+}
+
+.foodTable th,
+.foodTable td {
+  border: 1px solid #ddd;
+  padding: 10px;
+  min-width: 100px;
+}
+
+.foodTable th {
+  background-color: #f4f4f4;
+  font-weight: bold;
+}
+
+.foodTable tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.foodTable tr:hover {
+  background-color: #f1f1f1;
+}
+
+.foodTable .foodValue {
+  text-align: center;
 }
