--- a/src/components/Pagination/pagination.module.css
+++ b/src/components/Pagination/pagination.module.css
@@ -5,6 +5,7 @@
   gap: 8px;
   margin-top: 15px;
   width: 100%;
+
 }
 
 .pageButton {
@@ -14,6 +15,7 @@
   padding: 8px 8px;
   font-size: 11px;
   cursor: pointer;
+  color: black;
 }
 
 .pageButton:hover {
@@ -26,6 +28,7 @@
   padding: 8px 12px;
   font-size: 11px;
   transition: all 0.3s ease;
+  color: black;
 }
 
 .pageNumber:hover {
