--- a/src/pages/Profile/profile.module.css
+++ b/src/pages/Profile/profile.module.css
@@ -6,12 +6,12 @@
 }
 
 .userUl {
-  padding: 30px;
+  padding: 20px;
   /* border-top: 1px solid; */
   display: flex;
   flex-direction: column;
   gap: 20px;
-  width: 260px;
+  width: 100%;
 }
 
 .userUl_div {
@@ -27,6 +27,12 @@
 .img_wrap {
   display: flex;
   justify-content: center;
+}
+
+.basic_img {
+  width: 70px;
+  height: 70px;
+  border-radius: 100px;
 }
 
 .img {
@@ -67,7 +73,7 @@
 }
 
 .input {
-  width: 60%;
+  width: 70%;
   padding: 10px;
   font-size: 13px;
   border: none;
@@ -80,7 +86,7 @@
 }
 
 .button {
-  padding: 6px 16px;
+  padding: 5px;
 }
 
 .notice {
@@ -150,4 +156,9 @@
 
 .post_ul li p {
   padding: 10px;
+}
+
+.errors {
+  font-size: 12px;
+  color: #002daa;
 }
