--- a/src/pages/PetWalk/petWalk.module.css
+++ b/src/pages/PetWalk/petWalk.module.css
@@ -7,14 +7,16 @@
 }
 
 .container {
-  width: 100%;
-  margin: 0 auto;
+  padding: 20px;
+  height: auto;
+  background-color: white;
+  flex-grow: 1;
 }
 
 .title {
   font-size: 16px;
   font-family: "HakgyoansimDunggeunmisoTTF-B";
-  margin: 50px 0 10px 0;
+  margin-bottom: 10px;
 }
 
 .description {
@@ -22,4 +24,17 @@
   line-height: 1.2rem;
   color: #444;
   white-space: pre-line;
+  border-bottom: 1px solid #ddd;
+  padding-bottom: 10px;
+  margin-top: 10px;
+}
+
+.description_span {
+  font-size: 14px;
+  font-family: "HakgyoansimDunggeunmisoTTF-B";
+  color: #002daa;
+}
+
+.description_p_span{
+  color: red;
 }
