--- a/src/components/AddressForm/addressForm.module.css
+++ b/src/components/AddressForm/addressForm.module.css
@@ -5,12 +5,13 @@
   bottom: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 100000;
+  z-index: 1000;
 }
 
 .content {
   position: fixed;
   top: 50%;
   left: 50%;
-  z-index: 10000000;
+  z-index: 10000;
+  background-color: #fff;
 }
