--- a/src/components/AddressForm/addressForm.module.css
+++ b/src/components/AddressForm/addressForm.module.css
@@ -14,4 +14,40 @@
   left: 50%;
   z-index: 10000;
   background-color: #fff;
+  transform: translate(-50%, -50%);
+}
+
+.content div {
+  display: flex;
+  justify-content: right;
+  padding-bottom: 10px;
+  padding-right: 5px;
+}
+
+.content div a {
+  text-decoration: none;
+  color: #000;
+  font-size: 20px;
+}
+
+.input {
+  width: 70%;
+  padding: 10px;
+  font-size: 13px;
+  border: none;
+  border-bottom: 1px solid #93c9ff;
+}
+
+.address_button {
+  padding: 5px;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: center;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #93c9ff;
+  color: white;
 }
