--- a/src/index.css
+++ b/src/index.css
@@ -169,3 +169,28 @@ html {
 html::-webkit-scrollbar {
   display: none;
 }
+
+.custom-marker {
+  position: relative;
+  width: 35px;
+  height: 35px;
+}
+
+.custom-marker img {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  cursor: pointer;
+}
+
+.marker-label {
+  position: absolute;
+  top: -30px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 12px;
+}
