--- a/src/pages/Profile/profile.module.css
+++ b/src/pages/Profile/profile.module.css
@@ -55,7 +55,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
 }
 
 .nickName_div {
@@ -72,6 +72,11 @@
 
 .pencil {
   width: 20px;
+}
+
+.address {
+  color: #555555;
+  font-size: 14px;
 }
 
 .input {
