--- a/src/components/MenuBar/menubar.module.css
+++ b/src/components/MenuBar/menubar.module.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "HakgyoansimDunggeunmisoTTF-B";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimDunggeunmisoTTF-B.woff2")
+    format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
 .footer {
   width: 100%;
   max-width: 360px;
@@ -18,6 +26,7 @@
 
 .footer a {
   cursor: pointer;
+  font-family: "HakgyoansimDunggeunmisoTTF-B";
 }
 
 .home {
