--- a/src/pages/Chat/components/chatinput.module.css
+++ b/src/pages/Chat/components/chatinput.module.css
@@ -1,6 +1,12 @@
 .comment_input {
   display: flex;
-  padding-bottom: 8px;
+  width: 100%;
+  max-width: 360px;
+  position: fixed;
+  bottom: 0;
+  background-color: #ffffff;
+  padding: 8px 0;
+  border-top: 1px solid rgb(231, 232, 235);
 }
 
 .comment_input > input {
