--- a/src/pages/PetFriends/petfriends.module.css
+++ b/src/pages/PetFriends/petfriends.module.css
@@ -1,4 +1,7 @@
 .wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .map_container {
@@ -7,12 +10,56 @@
   height: 360px;
 }
 
-.selected_user_image_wrapper {
-  width: 100px;
-  height: 100px;
+.selected_user_card {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 8px 0px;
+  align-items: center;
+  width: 100%;
+  background-color: white;
+  border-radius: 16px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+  margin-top: 16px;
 }
 
-.selected_user_image_wrapper > img {
+.selected_user_card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+.image_wrapper {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile_image {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+}
+
+.user_info {
+  text-align: center;
+  margin-top: 12px;
+}
+
+.user_name {
+  font-size: 18px;
+  font-weight: bold;
+  color: #333;
+  margin: 0;
+}
+
+.pet_details {
+  font-size: 14px;
+  color: #666;
+  margin-top: 4px;
 }
