--- a/src/pages/Error/error.module.css
+++ b/src/pages/Error/error.module.css
@@ -1,17 +1,21 @@
 .errorWrapper {
-  width: 360px;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .errorContainer {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
 .logo {
-  width: 120px;
-  margin-bottom: 20px;
+  width: 240px;
 }
 
 .errorTitle {
@@ -21,17 +25,17 @@
 }
 
 .errorMessage {
-  font-size: 16px;
+  font-size: 22px;
   color: #444;
   line-height: 1.5;
 }
 
 .homeButton {
   margin-top: 20px;
-  padding: 10px 20px;
+  padding: 4px 8px;
   font-size: 16px;
   font-weight: bold;
-  background-color: #93C9FF;
+  background-color: #93c9ff;
   color: white;
   border: none;
   border-radius: 5px;
@@ -39,5 +43,5 @@
 }
 
 .homeButton:hover {
-  background-color: #002DAA;
+  background-color: #002daa;
 }
