--- a/src/pages/Roulette/roulette.module.css
+++ b/src/pages/Roulette/roulette.module.css
@@ -12,30 +12,44 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  justify-content: center;
 }
 
 .roulette_content {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 50px;
+  background: rgb(254, 235, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(254, 235, 255, 1) 0%,
+    rgba(209, 202, 246, 1) 50%,
+    rgba(197, 236, 255, 1) 100%
+  );
 }
 
 .h1 {
   font-family: "HakgyoansimDunggeunmisoTTF-B";
   font-size: 30px;
   font-weight: 100;
-  /* background: rgb(180, 58, 159);
-  background: linear-gradient(
-    90deg,
-    rgba(180, 58, 159, 1) 0%,
-    rgba(253, 29, 29, 1) 50%,
-    rgba(251, 252, 69, 1) 100%
-  ); */
+  display: flex;
+  justify-content: center;
   padding: 30px 20px;
+}
+
+.color_wrap {
+  border-radius: 10px;
+  box-shadow: 0px 2px 2px 2px rgba(87, 87, 87, 0.37);
+  padding: 20px 0px;
+  margin: 0 10px;
+  background-color: #fff;
 }
 
 .button_wrap {
   display: flex;
+  justify-content: center;
   gap: 10px;
 }
 
@@ -122,7 +136,7 @@
   transform: scale(1.2);
 }
 
-.colorBtn {
+.triColor {
   width: 25px;
   height: 25px;
   border-radius: 100px;
@@ -137,19 +151,24 @@
   transition: transform 0.1s ease;
   cursor: pointer;
 }
-.colorBtn:hover {
+.triColor:hover {
   transform: scale(1.2);
+}
+
+.roulette_wrap {
+  display: flex;
+  justify-content: center;
 }
 
 .roulette_container {
   height: 280px;
   width: 280px;
-  background: rgb(180, 58, 159);
+  background: rgb(177, 207, 255);
   background: linear-gradient(
     90deg,
-    rgba(180, 58, 159, 1) 0%,
-    rgba(253, 29, 29, 1) 50%,
-    rgba(251, 252, 69, 1) 100%
+    rgba(177, 207, 255, 1) 0%,
+    rgba(202, 202, 246, 1) 50%,
+    rgba(177, 207, 255, 1) 100%
   );
   border-radius: 50%;
   position: relative;
@@ -262,15 +281,51 @@
 }
 
 .content {
+  width: 280px;
+  height: 150px;
+  border-radius: 20px;
   position: fixed;
-  top: 50%;
+  top: 67%;
   left: 50%;
   z-index: 10000;
   background-color: #fff;
   transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  /* border: solid; */
+  box-shadow: 0px 2px 2px 2px rgba(87, 87, 87, 0.37);
 }
 
 .modal {
   display: flex;
   align-items: center;
+}
+
+.colorPick {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 10px 0px;
+}
+
+.startBtn {
+  display: flex;
+  justify-content: center;
+}
+
+.name {
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 20px;
+  font-family: "HakgyoansimDunggeunmisoTTF-B";
+}
+
+.close {
+  width: 100%;
+  display: flex;
+  justify-content: right;
+  padding: 10px 20px;
+  margin-right: 20px;
 }
