--- a/src/pages/CreatePetProfile/createPetProfile.module.css
+++ b/src/pages/CreatePetProfile/createPetProfile.module.css
@@ -7,10 +7,12 @@
 }
 
 .petProfile_wrap {
-  width: 280px;
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .pet_wrap {
@@ -20,6 +22,12 @@
   border-radius: 20px;
   background-color: #f5f5f5;
   width: 260px;
+  box-shadow: 0px 2px 2px 2px rgba(87, 87, 87, 0.37);
+}
+
+.petProfile_wrap_div {
+  padding: 10px 5px;
+  display: flex;
 }
 
 .petProfile_wrap_div p {
@@ -50,6 +58,13 @@
 .img_wrap {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+}
+.img_wrap p {
+  font-size: 12px;
+  color: #747474;
 }
 
 .img_wrap input {
@@ -69,13 +84,6 @@
   width: 70px;
   height: 70px;
   transition: opacity 0.3sease;
-}
-
-.petProfile_wrap_div {
-  padding: 10px 5px;
-
-  margin-top: 50px;
-  display: flex;
 }
 
 .form {
