--- a/src/pages/Chat/chat.module.css
+++ b/src/pages/Chat/chat.module.css
@@ -4,3 +4,26 @@
   flex-direction: column;
   padding: 52px 0px 80px 0px;
 }
+
+.chat_header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding: 10px 0;
+  border-bottom: 1px solid #ddd;
+}
+
+.back_button {
+  position: absolute;
+  left: 10px;
+  cursor: pointer;
+  width: 16px;
+  height: 16px;
+  padding: 2px 0px;
+}
+
+.back_button > img {
+  width: 100%;
+  height: 100%;
+}
