--- a/src/components/PetForm/petForm.module.css
+++ b/src/components/PetForm/petForm.module.css
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: center;
   border-radius: 20px;
-  background-color: #f5f5f5;
+  background-color: #fff;
   padding: 10px;
   width: 280px;
   flex-direction: column;
@@ -32,13 +32,29 @@
 
 .button {
   padding: 0px;
-  color: #000;
+  color: #5d5d5d;
   font-size: 12px;
-  background-color: #f5f5f5;
+  cursor: pointer;
+  background-color: #fff;
 }
 
 .button:hover {
-  background-color: #f5f5f5;
+  background-color: #fff;
+}
+
+.edit_img {
+  width: 60px;
+  height: 60px;
+  border-radius: 100px;
+}
+
+.edit_img:hover {
+  opacity: 0.5;
+  content: url("/images/unsplash.png");
+  width: 60px;
+  height: 60px;
+  transition: opacity 5sease;
+  cursor: pointer;
 }
 
 .img {
@@ -56,7 +72,7 @@
 
 .pet_ul li p {
   font-size: 14px;
-  color: #7a7a7acd;
+  color: #000000cd;
 }
 
 .edit_pet_ul {
