--- a/src/pages/CreatePetProfile/createPetProfile.module.css
+++ b/src/pages/CreatePetProfile/createPetProfile.module.css
@@ -13,6 +13,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: #ddeeff;
+  gap: 30px;
 }
 
 .pet_wrap {
@@ -20,7 +22,7 @@
   flex-direction: column;
   padding: 20px;
   border-radius: 20px;
-  background-color: #f5f5f5;
+  background-color: #fff;
   width: 260px;
   box-shadow: 0px 2px 2px 2px rgba(87, 87, 87, 0.37);
 }
@@ -49,10 +51,9 @@
 
 .pet_wrap div li input {
   border: none;
-  border-bottom: solid 1px #f5f5f5;
+  border-bottom: solid 1px #c2c1c1;
   width: 150px;
   height: 30px;
-  border-radius: 5px;
 }
 
 .img_wrap {
@@ -60,7 +61,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  gap: 5px;
+  gap: 10px;
 }
 .img_wrap p {
   font-size: 12px;
@@ -84,6 +85,7 @@
   width: 70px;
   height: 70px;
   transition: opacity 0.3sease;
+  cursor: pointer;
 }
 
 .form {
@@ -119,7 +121,6 @@
   justify-content: center;
   flex-direction: column;
   gap: 5px;
-  align-items: center;
 }
 
 .list div {
