--- a/src/components/CommunityPost/communitypost.module.css
+++ b/src/components/CommunityPost/communitypost.module.css
@@ -43,9 +43,15 @@
   color: #4a4a4a;
 }
 
-.creator_image {
+.profileImage_wrapper {
   width: 36px;
   height: 36px;
+}
+
+.creator_image {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
 }
 
 .post_image_container {
