펫 워킹 수정 중

--- a/src/components/Pagination/pagination.module.css
+++ b/src/components/Pagination/pagination.module.css
@@ -17,6 +17,10 @@
   border-radius: 0px;
 }
 
+.pageButton:disabled {
+  background-color: transparent;
+}
+
 .pageButton:hover {
   background-color: #fff;
   border-radius: 0px;
