--- a/src/index.css
+++ b/src/index.css
@@ -174,6 +174,8 @@ html::-webkit-scrollbar {
   position: relative;
   width: 35px;
   height: 35px;
+  background-color: #ffffff;
+  border-radius: 100%;
 }
 
 .custom-marker img {
