--- a/src/index.css
+++ b/src/index.css
@@ -171,28 +171,36 @@ html::-webkit-scrollbar {
 }
 
 .custom-marker {
-  position: relative;
   width: 35px;
   height: 35px;
-  background-color: #ffffff;
-  border-radius: 100%;
+  background-color: white;
+  border-radius: 50%;
 }
 
 .custom-marker img {
   width: 100%;
   height: 100%;
-  border-radius: 100%;
+  border-radius: 50%;
   cursor: pointer;
+}
+
+.my-marker img {
+  width: 35px;
+  height: 35px;
+  border: 3px solid #002daa;
+  border-radius: 50%;
+  background-color: white;
 }
 
 .marker-label {
   position: absolute;
-  top: -30px;
+  top: -28px;
   left: 50%;
   transform: translateX(-50%);
-  background: rgba(0, 0, 0, 0.7);
+  background: black;
   color: white;
-  padding: 5px 10px;
-  border-radius: 5px;
+  padding: 4px 8px;
+  border-radius: 4px;
   font-size: 12px;
+  white-space: nowrap;
 }
